--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "envalid": "^8.1.1",
-    "pino": "^10.1.0",
+    "nestjs-pino": "^4.4.1",
     "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prisma": "^7.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
