--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "envalid": "^8.1.1",
     "nestjs-pino": "^4.4.1",
     "pino-pretty": "^13.1.2",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
