bug-fix: fixed issues related to loading up the backend

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,29 @@
 {
   "compilerOptions": {
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "resolvePackageJsonExports": true,
+    "module": "CommonJS",
+    "target": "ES2017",
+
+    "moduleResolution": "node",
+    "resolvePackageJsonExports": false,
+
     "esModuleInterop": true,
-    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true,
+
+    "isolatedModules": false,
+
     "declaration": true,
     "removeComments": true,
+
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2023",
+
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     "incremental": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
