feat: update database configurations, enhance health checks, and improve operator services with caching

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ ANALYTICS_DATABASE_URL=postgresql://user:password@localhost:5432/eigenlayer_anal
 ANALYTICS_DATABASE_POOL_SIZE=10
 
 # User Database (READ-WRITE for backend)
-USER_DATABASE_URL=postgresql://user:password@localhost:5432/eigenwatch_users
+USER_DATABASE_URL=postgresql://user:password@localhost:5432/eigenwatch-backend
 USER_DATABASE_POOL_SIZE=5
 
 # Redis
