--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@nestjs/swagger": "^11.2.3",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "envalid": "^8.1.1",
     "ethers": "^6.15.0",
     "jsonwebtoken": "^9.0.2",
